<resources>
    <string name="app_name">MiniCalculadora</string>
    <string name="str_calc">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_.">.</string>
    <string name="btn_masMenos">+-</string>
    <string name="btn_mas">+</string>
    <string name="btn_menos">-</string>
    <string name="btn_por">x</string>
    <string name="btn_dividir">/</string>
    <string name="btn_root">Root</string>
    <string name="btn_inv">Inv</string>
    <string name="btn_ac">AC</string>
    <string name="btn_igual">=</string>
</resources>