<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:columnCount="5"
    app:rowCount="6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/str_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/str_calcBack"
            android:fontFamily="casual"
            android:gravity="right"
            android:text="@string/str_calc"
            android:textColor="@color/str_calc"
            android:textSize="48sp"
            app:layout_columnSpan="5" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_1"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_2"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_3"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_mas"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_signos"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_mas"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_menos"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_signos"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_menos"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_column="4"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_4"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_5"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_6"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_por"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_signos"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_por"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_dividir"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_signos"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_dividir"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_column="4"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_7"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_8"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_9"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_root"
            android:layout_width="55dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_especial"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_root"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_column="3"
            app:layout_gravity="center_vertical"
            app:layout_row="3"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/btn_inv"
            android:layout_width="55dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_especial"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_inv"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_column="4"
            app:layout_gravity="center_vertical"
            app:layout_row="3"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_0"
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_punto"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_."
            android:textSize="20sp"
            app:cornerRadius="27.5dp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_masMenos"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_signos"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_masMenos"
            android:textSize="14sp"
            app:cornerRadius="0dp"
            app:layout_column="2"
            app:layout_gravity="center_vertical"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_igual"
            android:layout_width="195dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_numeros"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_igual"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnSpan="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_ac"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/btn_ac"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_ac"
            app:cornerRadius="0dp"
            app:layout_columnSpan="2" />

</androidx.gridlayout.widget.GridLayout>